objects/MVR__c.object
<CustomObject>
    <description>raw table from NZTA</description>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Acquisition Date (Ownership)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternative_Fuel_Type__c</fullName>
        <label>Alternative Fuel Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assembly_Type__c</fullName>
        <label>Assembly Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Axle_Type__c</fullName>
        <label>Axle Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Style__c</fullName>
        <description>e.g. &quot;HA&quot; = &quot;Hatchback&quot;</description>
        <label>Body Style</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Rating__c</fullName>
        <label>CC Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_reason_code__c</fullName>
        <label>Cancellation reason code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Of_Latest_Registration__c</fullName>
        <inlineHelpText>New, Used, Reregistered</inlineHelpText>
        <label>Cause Of Latest Registration</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_No__c</fullName>
        <label>Chassis No.</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuous_Licence__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Continuous Licence</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Issue_For_Latest_Licence__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date Of Issue For Latest Licence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Latest_COF_Inspection__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date Of Latest COF Inspection</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Latest_WOF_Inspection__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date Of Latest WOF Inspection</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Odometer_Reading__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date Of Odometer Reading</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Query_Processed__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date Query Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Reported_Stolen__c</fullName>
        <inlineHelpText>future use</inlineHelpText>
        <label>Date Reported Stolen</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Of_Registered_Person__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date of Birth Of Registered Person</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Latest_Registration__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date of Latest Registration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_first_Registration_In_NZ__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Date of first Registration In NZ</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_first_Registration_Overseas__c</fullName>
        <label>Day of first Registration Overseas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_No__c</fullName>
        <label>Engine No.</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message_Severity__c</fullName>
        <label>Error Message Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_OF_Last_Successful_COF__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Expiry Date OF Last Successful COF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Of_Last_Successful_WOF__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Expiry Date Of Last Successful WOF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Lease_Owner__c</fullName>
        <label>Fleet/Lease Owner</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Lease_Ownership__c</fullName>
        <inlineHelpText>F= Fleet
L = Lease
Blank = neither</inlineHelpText>
        <label>Fleet/Lease Ownership</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Axle_Group_Rating__c</fullName>
        <label>Front Axle Group Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gone_No_Address__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Gone No Address</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Vehicle_Mass__c</fullName>
        <inlineHelpText>(kg)</inlineHelpText>
        <label>Gross Vehicle Mass</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Imported_Damaged__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Imported Damaged</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Agent__c</fullName>
        <label>Inspection Agent</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Owner_Indicator__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Joint Owner Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Owner_Name_No_1__c</fullName>
        <label>Joint Owner Name No. 1</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Owner_Name_No_2__c</fullName>
        <label>Joint Owner Name No. 2</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Owner_Name_No_3__c</fullName>
        <label>Joint Owner Name No. 3</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Odometer_Reading__c</fullName>
        <label>Latest Odometer Reading</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licence_Expiry_Date__c</fullName>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Licence Expiry Date</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licence_Type__c</fullName>
        <label>Licence Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Process_Date__c</fullName>
        <label>Load Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Load_Process_Message__c</fullName>
        <label>Load Process Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Box_Bag_Number__c</fullName>
        <label>Mailing Address Box Bag Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Box_Bag_Rd__c</fullName>
        <label>Mailing Address Box Bag Rd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Flat_Floor_Name__c</fullName>
        <label>Mailing Address Flat Floor Name</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Postcode__c</fullName>
        <label>Mailing Address Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Property_Name__c</fullName>
        <label>Mailing Address Property Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_RD_Number__c</fullName>
        <label>Mailing Address RD Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Street_Name__c</fullName>
        <label>Mailing Address Street Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Street_Number__c</fullName>
        <label>Mailing Address Street Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Suburb__c</fullName>
        <label>Mailing Address Suburb</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Town__c</fullName>
        <label>Mailing Address Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Colour__c</fullName>
        <label>Main Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Rated_Towed_Mass_For_Unbraked_Tr__c</fullName>
        <inlineHelpText>(kg)</inlineHelpText>
        <label>Maximum Rated Towed Mass For Unbraked Tr</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Rated_Towed_Mass_For_braked_Trai__c</fullName>
        <inlineHelpText>(kg)</inlineHelpText>
        <label>Maximum Rated Towed Mass For braked Trai</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Code_1__c</fullName>
        <inlineHelpText>&quot;00&quot; if no error</inlineHelpText>
        <label>Message Code 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Code_2__c</fullName>
        <inlineHelpText>&quot;00&quot; if no error</inlineHelpText>
        <label>Message Code 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Code_3__c</fullName>
        <inlineHelpText>&quot;00&quot; if no error</inlineHelpText>
        <label>Message Code 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_first_Registration_Overseas__c</fullName>
        <label>Month of first Registration Overseas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Axles__c</fullName>
        <label>No. Of Axles</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Seats__c</fullName>
        <label>No. Of Seats</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Source__c</fullName>
        <label>Odometer Source</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Unit__c</fullName>
        <label>Odometer Unit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <label>Ownership Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Flat_Floor_Number__c</fullName>
        <label>Physical Address Flat Floor Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Postcode__c</fullName>
        <label>Physical Address Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Property_Name__c</fullName>
        <label>Physical Address Property Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_RD_Number__c</fullName>
        <label>Physical Address RD Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Street_Name__c</fullName>
        <label>Physical Address Street Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Street_Number__c</fullName>
        <label>Physical Address Street Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Suburb__c</fullName>
        <label>Physical Address Suburb</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Town__c</fullName>
        <label>Physical Address Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate_No__c</fullName>
        <label>Plate No.</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate_Type__c</fullName>
        <label>Plate Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <inlineHelpText>(kW)</inlineHelpText>
        <label>Power</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Country_of_Registration__c</fullName>
        <label>Previous Country of Registration</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Date_for_Owner_As_At__c</fullName>
        <description>date of offence for enforcement querys</description>
        <inlineHelpText>DDMMCCYY</inlineHelpText>
        <label>Query Date for Owner As At</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rear_Axle_Group_rating__c</fullName>
        <label>Rear Axle Group rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <inlineHelpText>2 = Current details
3 = registered person as at date</inlineHelpText>
        <label>Record Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_Overseas__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Registered Overseas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Person_Name__c</fullName>
        <label>Registered Person Name</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reliable_Odometer__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Reliable Odometer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Plate__c</fullName>
        <label>Replacement Plate</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Stolen__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Reported Stolen</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Of_Latest_COF_Inspection__c</fullName>
        <label>Result Of Latest COF Inspection</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Of_Latest_WOF_Inspection__c</fullName>
        <label>Result Of Latest WOF Inspection</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Colour__c</fullName>
        <label>Second Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex_Company__c</fullName>
        <inlineHelpText>&quot;M&quot; or &quot;F&quot; or &quot;C&quot;</inlineHelpText>
        <label>Sex/Company</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_To_COF_Inspection__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Subject To COF Inspection</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_To_RUC__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Subject To RUC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_WOF__c</fullName>
        <inlineHelpText>&quot;Y&quot; or &quot;N&quot;</inlineHelpText>
        <label>Subject to WOF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submodel__c</fullName>
        <label>Submodel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tare_Weight__c</fullName>
        <inlineHelpText>(kg)</inlineHelpText>
        <label>Tare Weight</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Of_Issue_For_Latest_Licence__c</fullName>
        <label>Time Of Issue For Latest Licence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trading_As_Representing__c</fullName>
        <label>Trading As/Representing</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Usage__c</fullName>
        <label>Vehicle Usage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wheelbase__c</fullName>
        <label>Wheelbase</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Of_Manufacture__c</fullName>
        <label>Year Of Manufacture</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_first_Registration_Overseas__c</fullName>
        <label>Year of first Registration Overseas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MVR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plate_No__c</columns>
        <columns>Year_Of_Manufacture__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Submodel__c</columns>
        <columns>Main_Colour__c</columns>
        <columns>Registered_Person_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cautions</fullName>
        <columns>NAME</columns>
        <columns>Plate_No__c</columns>
        <columns>Load_Process_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Message_Severity__c</field>
            <operation>equals</operation>
            <value>Caution</value>
        </filters>
        <label>Cautions</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Plate_No__c</columns>
        <columns>Load_Process_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Message_Severity__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Errors</label>
    </listViews>
    <listViews>
        <fullName>Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Plate_No__c</columns>
        <columns>Load_Process_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Message_Severity__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <label>Unassigned</label>
    </listViews>
    <nameField>
        <displayFormat>MV-{00000000}</displayFormat>
        <label>MVR Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MVRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>